--- a/estilo/syntax/base.yml
+++ b/estilo/syntax/base.yml
@@ -21,7 +21,7 @@ VertSplit: 'pureBlack pureBlack'
 Folded: 'darkPurp2 background'
 FoldColumn: 'darkPurp background'
 SignColumn: 'darkPurp background'
-IncSearch: 'pureWhite visualSel'
+IncSearch: 'pureWhite darkPurp'
 #Substitute: ''
 LineNr: 'darkPurp background'
 MatchParen: 'pureWhite darkPurp'
@@ -32,13 +32,13 @@ MoreMsg: 'purple'
 NonText: '@EndOfBuffer'
 #NormalFloat: ''
 #NormalNC: ''
-PMenu: 'foreground darkPurp'
-PMenuSel: 'yellow visualSel'
-PmenuSbar: 'foreground darkPurp2'
-PmenuThumb: 'foreground darkPurp2'
+Pmenu: 'foreground visualSel'
+PmenuSel: 'pureWhite darkPurp'
+PmenuSbar: '- darkPurp'
+PmenuThumb: '- darkPurp2'
 Question: 'purple'
 QuickFixLine: 'foreground cursorLine'
-Search: 'pureWhite search'
+Search: 'pureWhite darkPurp2'
 SpecialKey: 'orange background'
 SpellBad: 'red - u'
 SpellLocal: 'foreground - u'
