Fix Airline tabline colors.

--- a/estilo/syntax/base.yml
+++ b/estilo/syntax/base.yml
@@ -48,9 +48,9 @@ StatusLine: 'foreground background r'
 StatusLineTerm: '@StatusLine'
 StatusLineTermNC: 'pureBlack darkPurp r'
 StatusLineNC: '@StatusLineTermNC'
-TabLine: 'pureBlack grey'
-TabLineFill: 'grey pureBlack'
-TabLineSel: 'grey2 background'
+TabLine: 'foreground background'
+TabLineFill: 'darkPurp2 background'
+TabLineSel: 'purple background'
 Visual: '- visualSel'
 VisualNOS: '@Visual'
 WarningMsg: 'orange background'
